--- a/index.html
+++ b/index.html
@@ -1,52 +1,78 @@
 <!doctype html>
 <html lang="es" data-theme="dark">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- ── Favicon ──────────────────────────────────────────── -->
-    <link rel="icon" type="image/svg+xml" href="/logoradio_embedded.svg" />
-    <link rel="apple-touch-icon" href="/logoradio.jpg" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- ── SEO Meta Tags ────────────────────────────────────── -->
-    <title>Radio Sisid Ecuador — Música en Vivo las 24 Horas | La Voz del Pueblo Cañari</title>
-    <meta name="description" content="Radio Sisid Ecuador — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo. Música intercultural, noticias y cultura las 24 horas." />
-    <meta name="keywords" content="radio, ecuador, cañari, en vivo, streaming, música intercultural, radio online, minneapolis, minnesota" />
-    <meta name="author" content="Radio Sisid Ecuador" />
-    <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://radiosisidecuador.com/" />
-    <meta name="theme-color" content="#e74c3c" />
+  <!-- ── Favicon ──────────────────────────────────────────── -->
+  <link rel="icon" type="image/svg+xml" href="/logoradio_embedded.svg" />
+  <link rel="apple-touch-icon" href="/logoradio.jpg" />
 
-    <!-- ── Open Graph / Facebook ────────────────────────────── -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://radiosisidecuador.com/" />
-    <meta property="og:title" content="Radio Sisid Ecuador — Música en Vivo las 24 Horas" />
-    <meta property="og:description" content="Escúchanos en vivo — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo." />
-    <meta property="og:image" content="https://radiosisidecuador.com/logoradio.jpg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Radio Sisid Ecuador - En Vivo" />
-    <meta property="og:locale" content="es_EC" />
-    <meta property="og:site_name" content="Radio Sisid Ecuador" />
+  <!-- ── SEO Meta Tags ────────────────────────────────────── -->
+  <title>Radio Sisid Ecuador — Música en Vivo las 24 Horas | La Voz del Pueblo Cañari</title>
+  <meta name="description"
+    content="Radio Sisid Ecuador — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo. Música intercultural, noticias y cultura las 24 horas." />
+  <meta name="keywords"
+    content="radio, ecuador, cañari, en vivo, streaming, música intercultural, radio online, minneapolis, minnesota" />
+  <meta name="author" content="Radio Sisid Ecuador" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://radio-sidid-ecuador.vercel.app/" />
+  <meta name="theme-color" content="#e74c3c" />
 
-    <!-- ── Twitter Card ─────────────────────────────────────── -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Radio Sisid Ecuador — Música en Vivo las 24 Horas" />
-    <meta name="twitter:description" content="Escúchanos en vivo — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo." />
-    <meta name="twitter:image" content="https://radiosisidecuador.com/logoradio.jpg" />
+  <!-- ── Open Graph / Facebook ────────────────────────────── -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://radio-sidid-ecuador.vercel.app/" />
+  <meta property="og:title" content="Radio Sisid Ecuador — Música en Vivo las 24 Horas" />
+  <meta property="og:description"
+    content="Escúchanos en vivo — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo." />
+  <meta property="og:image" content="https://radio-sidid-ecuador.vercel.app/logoradio.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Radio Sisid Ecuador - En Vivo" />
+  <meta property="og:locale" content="es_EC" />
+  <meta property="og:site_name" content="Radio Sisid Ecuador" />
 
-    <!-- ── JSON-LD Structured Data ──────────────────────────── -->
-    <script type="application/ld+json">
+  <!-- ── Whatsap Card ─────────────────────────────────────── -->
+  <!-- WhatsApp Preview (Open Graph) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="es_EC" />
+  <meta property="og:site_name" content="Radio Sisid Ecuador" />
+
+  <meta property="og:title" content="Radio Sisid Ecuador — Música en Vivo las 24 Horas" />
+  <meta property="og:description"
+    content="Escúchanos en vivo — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo." />
+  <meta property="og:url" content="https://radio-sidid-ecuador.vercel.app/" />
+
+  <meta property="og:image" content="https://radio-sidid-ecuador.vercel.app/logoradio.jpg" />
+  <meta property="og:image:secure_url" content="https://radio-sidid-ecuador.vercel.app/logoradio.jpg" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Radio Sisid Ecuador - En Vivo" />
+
+
+
+
+  <!-- ── Twitter Card ─────────────────────────────────────── -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Radio Sisid Ecuador — Música en Vivo las 24 Horas" />
+  <meta name="twitter:description"
+    content="Escúchanos en vivo — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo." />
+  <meta name="twitter:image" content="https://radio-sidid-ecuador.vercel.app/logoradio.jpg" />
+
+  <!-- ── JSON-LD Structured Data ──────────────────────────── -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@graph": [
         {
           "@type": "Organization",
-          "@id": "https://radiosisidecuador.com/#organization",
+          "@id": "https://radio-sidid-ecuador.vercel.app/#organization",
           "name": "Radio Sisid Ecuador",
           "alternateName": "Radio Sisid",
-          "url": "https://radiosisidecuador.com",
-          "logo": "https://radiosisidecuador.com/logoradio.jpg",
+          "url": "https://radio-sidid-ecuador.vercel.app",
+          "logo": "https://radio-sidid-ecuador.vercel.app/logoradio.jpg",
           "description": "La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo.",
           "address": {
             "@type": "PostalAddress",
@@ -67,16 +93,16 @@
         },
         {
           "@type": "WebSite",
-          "@id": "https://radiosisidecuador.com/#website",
-          "url": "https://radiosisidecuador.com",
+          "@id": "https://radio-sidid-ecuador.vercel.app/#website",
+          "url": "https://radio-sidid-ecuador.vercel.app",
           "name": "Radio Sisid Ecuador",
-          "publisher": { "@id": "https://radiosisidecuador.com/#organization" },
+          "publisher": { "@id": "https://radio-sidid-ecuador.vercel.app/#organization" },
           "inLanguage": "es"
         },
         {
           "@type": "RadioStation",
           "name": "Radio Sisid Ecuador",
-          "url": "https://radiosisidecuador.com",
+          "url": "https://radio-sidid-ecuador.vercel.app",
           "broadcastDisplayName": "Radio Sisid Ecuador",
           "broadcastTimezone": "America/Guayaquil",
           "areaServed": {
@@ -88,13 +114,15 @@
     }
     </script>
 
-    <!-- ── Preconnect / Prefetch ────────────────────────────── -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="dns-prefetch" href="https://images.unsplash.com" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- ── Preconnect / Prefetch ────────────────────────────── -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="dns-prefetch" href="https://images.unsplash.com" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
