--- a/index.html
+++ b/index.html
@@ -33,24 +33,9 @@
   <meta property="og:locale" content="es_EC" />
   <meta property="og:site_name" content="Radio Sisid Ecuador" />
 
-  <!-- ── Whatsap Card ─────────────────────────────────────── -->
-  <!-- WhatsApp Preview (Open Graph) -->
-  <meta property="og:type" content="website" />
-  <meta property="og:locale" content="es_EC" />
-  <meta property="og:site_name" content="Radio Sisid Ecuador" />
-
-  <meta property="og:title" content="Radio Sisid Ecuador — Música en Vivo las 24 Horas" />
-  <meta property="og:description"
-    content="Escúchanos en vivo — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo." />
-  <meta property="og:url" content="https://radio-sidid-ecuador.vercel.app/" />
-
-  <meta property="og:image" content="https://radio-sidid-ecuador.vercel.app/logoradio.jpg" />
+  <!-- WhatsApp usa las mismas meta OG de arriba; no duplicar -->
   <meta property="og:image:secure_url" content="https://radio-sidid-ecuador.vercel.app/logoradio.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
-  <meta property="og:image:alt" content="Radio Sisid Ecuador - En Vivo" />
-
 
 
 
