--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <meta name="description"
     content="Radio Sisid Ecuador — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo. Música intercultural, noticias y cultura las 24 horas." />
   <meta name="keywords"
-    content="radio, ecuador, cañari, en vivo, streaming, música intercultural, radio online, minneapolis, minnesota" />
+    content="radio, ecuador, cañari, en vivo, streaming, música intercultural, radio online, minneapolis, minnesota, radios de ecuador, radio cañari en vivo, emisoras ecuatorianas, música ecuatoriana, radio latina minnesota" />
   <meta name="author" content="Radio Sisid Ecuador" />
-  <meta name="robots" content="index, follow" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
   <link rel="canonical" href="https://radio-sidid-ecuador.vercel.app/" />
+  <link rel="alternate" hreflang="es" href="https://radio-sidid-ecuador.vercel.app/" />
+  <link rel="alternate" hreflang="es-EC" href="https://radio-sidid-ecuador.vercel.app/" />
   <meta name="theme-color" content="#e74c3c" />
 
   <!-- ── Open Graph / Facebook ────────────────────────────── -->
@@ -72,7 +74,7 @@
           "contactPoint": {
             "@type": "ContactPoint",
             "contactType": "customer service",
-            "email": "info@radiosisid.com",
+            "email": "liberatoguaman5815@gmail.com",
             "availableLanguage": "Spanish"
           }
         },
