--- a/index.html
+++ b/index.html
@@ -28,25 +28,23 @@
   <meta property="og:title" content="Radio Sisid Ecuador — Música en Vivo las 24 Horas" />
   <meta property="og:description"
     content="Escúchanos en vivo — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo." />
-  <meta property="og:image" content="https://radio-sidid-ecuador.vercel.app/logoradio.jpg" />
+  <meta property="og:image" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:image:alt" content="Radio Sisid Ecuador - En Vivo" />
+  <meta property="og:image:alt" content="Radio Sisid Ecuador - La Voz del Pueblo Cañari" />
   <meta property="og:locale" content="es_EC" />
   <meta property="og:site_name" content="Radio Sisid Ecuador" />
 
   <!-- WhatsApp usa las mismas meta OG de arriba; no duplicar -->
-  <meta property="og:image:secure_url" content="https://radio-sidid-ecuador.vercel.app/logoradio.jpg" />
-  <meta property="og:image:type" content="image/jpeg" />
-
-
+  <meta property="og:image:secure_url" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.png" />
+  <meta property="og:image:type" content="image/png" />
 
   <!-- ── Twitter Card ─────────────────────────────────────── -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Radio Sisid Ecuador — Música en Vivo las 24 Horas" />
   <meta name="twitter:description"
     content="Escúchanos en vivo — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo." />
-  <meta name="twitter:image" content="https://radio-sidid-ecuador.vercel.app/logoradio.jpg" />
+  <meta name="twitter:image" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.png" />
 
   <!-- ── JSON-LD Structured Data ──────────────────────────── -->
   <script type="application/ld+json">
