--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <meta property="og:title" content="Radio Sisid Ecuador — Música en Vivo las 24 Horas" />
   <meta property="og:description"
     content="Escúchanos en vivo — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo." />
-  <meta property="og:image" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.png" />
+  <meta property="og:image" content="/img/seo-banner.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:alt" content="Radio Sisid Ecuador - La Voz del Pueblo Cañari" />
@@ -36,7 +36,7 @@
   <meta property="og:site_name" content="Radio Sisid Ecuador" />
 
   <!-- WhatsApp usa las mismas meta OG de arriba; no duplicar -->
-  <meta property="og:image:secure_url" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.png" />
+  <meta property="og:image:secure_url" content="/img/seo-banner.png" />
   <meta property="og:image:type" content="image/png" />
 
   <!-- ── Twitter Card ─────────────────────────────────────── -->
@@ -44,7 +44,7 @@
   <meta name="twitter:title" content="Radio Sisid Ecuador — Música en Vivo las 24 Horas" />
   <meta name="twitter:description"
     content="Escúchanos en vivo — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo." />
-  <meta name="twitter:image" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.png" />
+  <meta name="twitter:image" content="/img/seo-banner.png" />
 
   <!-- ── JSON-LD Structured Data ──────────────────────────── -->
   <script type="application/ld+json">
