--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -46,8 +47,8 @@
   <meta property="og:image" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.png" />
   <meta property="og:image:secure_url" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.png" />
   <meta property="og:image:type" content="image/png" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
+  <meta property="og:image:width" content="640" />
+  <meta property="og:image:height" content="640" />
   <meta property="og:image:alt" content="Radio Sisid Ecuador — La Voz del Pueblo Cañari. Escúchanos en vivo las 24 horas." />
   <meta property="og:locale" content="es_EC" />
   <meta property="og:locale:alternate" content="es_US" />
