--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
   <link rel="alternate" hreflang="es" href="https://radio-sidid-ecuador.vercel.app/" />
   <link rel="alternate" hreflang="es-EC" href="https://radio-sidid-ecuador.vercel.app/" />
   <link rel="alternate" hreflang="x-default" href="https://radio-sidid-ecuador.vercel.app/" />
-  <meta name="theme-color" content="#060810" />
   <meta name="theme-color" content="#060810" media="(prefers-color-scheme: dark)" />
   <meta name="theme-color" content="#0a1d5e" media="(prefers-color-scheme: light)" />
 
@@ -172,7 +171,11 @@
   <!-- ── Preconnect / Prefetch ────────────────────────────── -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rajdhani:wght@400;500;600;700&display=swap" media="print" onload="this.media='all'" />
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rajdhani:wght@400;500;600;700&display=swap" /></noscript>
   <link rel="dns-prefetch" href="https://de1.api.radio-browser.info" />
+  <link rel="dns-prefetch" href="https://de2.api.radio-browser.info" />
+  <link rel="dns-prefetch" href="https://nl1.api.radio-browser.info" />
   <link rel="dns-prefetch" href="https://www.youtube.com" />
 </head>
 
