--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
   <meta property="og:title" content="Radio Sisid Ecuador — Música en Vivo las 24 Horas" />
   <meta property="og:description"
     content="Escúchanos en vivo — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo. Música, noticias y cultura 24/7." />
-  <meta property="og:image" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.png" />
-  <meta property="og:image:secure_url" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.png" />
-  <meta property="og:image:type" content="image/png" />
-  <meta property="og:image:width" content="640" />
-  <meta property="og:image:height" content="640" />
+  <meta property="og:image" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.jpg" />
+  <meta property="og:image:secure_url" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.jpg" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:image:alt" content="Radio Sisid Ecuador — La Voz del Pueblo Cañari. Escúchanos en vivo las 24 horas." />
   <meta property="og:locale" content="es_EC" />
   <meta property="og:locale:alternate" content="es_US" />
@@ -58,7 +58,7 @@
   <meta name="twitter:title" content="Radio Sisid Ecuador — Música en Vivo 24h" />
   <meta name="twitter:description"
     content="Escúchanos en vivo — La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo." />
-  <meta name="twitter:image" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.png" />
+  <meta name="twitter:image" content="https://radio-sidid-ecuador.vercel.app/img/seo-banner.jpg" />
   <meta name="twitter:image:alt" content="Radio Sisid Ecuador — La Voz del Pueblo Cañari" />
 
   <!-- ── JSON-LD Structured Data ──────────────────────────── -->
@@ -78,7 +78,7 @@
             "width": 512,
             "height": 512
           },
-          "image": "https://radio-sidid-ecuador.vercel.app/img/seo-banner.png",
+          "image": "https://radio-sidid-ecuador.vercel.app/img/seo-banner.jpg",
           "description": "La voz del pueblo cañari. Desde Minneapolis, Minnesota hacia el mundo. Música intercultural, noticias y cultura las 24 horas.",
           "address": {
             "@type": "PostalAddress",
@@ -124,7 +124,7 @@
           "broadcastTimezone": "America/Chicago",
           "broadcastFrequency": "Internet",
           "logo": "https://radio-sidid-ecuador.vercel.app/logoradio.jpg",
-          "image": "https://radio-sidid-ecuador.vercel.app/img/seo-banner.png",
+          "image": "https://radio-sidid-ecuador.vercel.app/img/seo-banner.jpg",
           "slogan": "La voz del pueblo cañari",
           "parentOrganization": { "@id": "https://radio-sidid-ecuador.vercel.app/#organization" },
           "areaServed": [
@@ -149,7 +149,7 @@
           "inLanguage": "es",
           "primaryImageOfPage": {
             "@type": "ImageObject",
-            "url": "https://radio-sidid-ecuador.vercel.app/img/seo-banner.png"
+            "url": "https://radio-sidid-ecuador.vercel.app/img/seo-banner.jpg"
           }
         },
         {
